gitops/01-core/argocd/argocd-private-Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: tailscale
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: argocd
