gitops/01-core/argocd/argocd-private-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-private
  namespace: argocd
spec:
  parentRefs:
    - name: private
      namespace: istio-system
      sectionName: http
  hostnames:
    - "argocd.mmonteiro.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
